[tool.poetry]
name = "mlb-alphabet-game"
version = "0.1.0"
description = ""
authors = ["Greg Finley <gregory.finley@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.16"
requests = "^2.28.1"
google-cloud-bigquery = "^3.3.2"
tweepy = "^4.4.0"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
Unidecode = "^1.3.6"
google-cloud-storage = "^2.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
types-requests = "^2.25.0"
types-pytz = "^2021.1.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
